--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -100,8 +100,16 @@
 	</servlet-mapping>
 
     <error-page>
+        <error-code>400</error-code>
+        <location>/status/400</location>
+    </error-page>
+    <error-page>
         <error-code>404</error-code>
         <location>/status/404</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/status/500</location>
     </error-page>
 
 
