--- a/src/main/resources/com/djtu/signExam/config/email.properties
+++ b/src/main/resources/com/djtu/signExam/config/email.properties
@@ -5,4 +5,4 @@ mail.smtp.auth=true
 mail.host=smtp.qq.com
 mail.transport.protocol=smtp
 mail.user.account=787449527@qq.com
-mail.user.password=440923HIM
+mail.user.password=HHmm0408
